--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -30,7 +30,6 @@
 .page-wrap {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
